Revision history for Perl extension Test-Compile

v1.2.2    UNRELEASED              (Evan Giles <egiles@cpan.org>)
    - Remove the 'use 5.6.2' statements, they cause warnings.
    - Fix some spelling errors
    - Move the xt tests into the main test directory

v1.2.1    2014-12-09              (Evan Giles <egiles@cpan.org>)
    - Fix (skip where appropriate) failing CPAN test
    - Avoid warnings for empty files in all_pl_files (Nigel Gregoire)

v1.2.0    2014-08-08              (Evan Giles <egiles@cpan.org>)
    - Files without extension may not be perl (rt83917)
    - Small POD fix

v1.1.0    2014-07-18              (Evan Giles <egiles@cpan.org>)
    - Allow use of Test::Compile in an object oriented manner
    - Promote the OO interface in the POD
    - Test::Compile::Internal is now verbose by default
    - Correct the dependancy information

v1.0.1    2014-03-20              (Evan Giles <egiles@cpan.org>)
    - Fix stupid omission from the MANAIFEST (tests failed everywhere)

v1.0.0    2014-03-19              (Evan Giles <egiles@cpan.org>)
    - Try to use Sematic Versioning - http://semver.org
    - Add diagnostics on compilation failure        (Micheal G. Schwern)
    - require, don't use                            (Micheal G. Schwern)
    - Test for truth, not an integer.               (Micheal G. Schwern)
    - Small POD fix                                 (Micheal G. Schwern)
    - OS X is not a crazy OS from a redirection POV (Micheal G. Schwern)

0.24  2013 02 22                  (Evan Giles <egiles@cpan.org>)
    - Update POD to explain more problems with Test::Compile

0.23  2013.01.23                  (Evan Giles <egiles@cpan.org>)
    - Update Copyright for 2013
    - CPAN-RT #82887, Sébastien Aperghis-Tramoni <sebastien@aperghis.net>
        - Correct handling of PERL5LIB
        - fix regexp to detect taint mode

0.22  2012.10.31                  (Evan Giles <egiles@cpan.org>)
    - Set verbose on for the Test::Compile library (rt80187)
