@@ -4,6 +4,7 @@ v1.2.2    UNRELEASED              (Evan Giles <egiles@cpan.org>)
     - Remove the 'use 5.6.2' statements, they cause warnings.
     - Fix some spelling errors
     - Move the xt tests into the main test directory
+    - Deprecate the procedural functions
 
 v1.2.1    2014-12-09              (Evan Giles <egiles@cpan.org>)
     - Fix (skip where appropriate) failing CPAN test
